Jacoco insterion in build file

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,15 @@ test {
                 "${result.failedTestCount} failures, " +
                 "${result.skippedTestCount} skipped)")
     }
+Jacoco {
+    afterSuite { desc, result ->
+        if (!desc.parent)
+            println("${result.resultType} " +
+                "(${result.testCount} tests, " +
+                "${result.successfulTestCount} successes, " +
+                "${result.failedTestCount} failures, " +
+                "${result.skippedTestCount} skipped)")
+    }
 }
 
 
