--- a/src/com/files/EC2-SQS-S3.yml
+++ b/src/com/files/EC2-SQS-S3.yml
@@ -32,7 +32,11 @@ Parameters:
   CPUAlarmLowThreshold:
     Default: 20
     Type: "String"
-    Description: "This is the metric on which the alarm is activated.  Our metric is percentage of CPU usage that will trigger the scaling group"  
+    Description: "This is the metric on which the alarm is activated.  Our metric is percentage of CPU usage that will trigger the scaling group"
+  CPUAlarmLowThreshold:
+    Default: 20
+    Type: "String"
+    Description: "This is the metric on which the alarm is activated.  Our metric is percentage of CPU usage that will trigger the scaling group"    
   
 
   UpdatePauseTime:
