Trim commit hash insterion in build file

--- a/src/com/files/EC2.yml
+++ b/src/com/files/EC2.yml
@@ -40,6 +40,11 @@ Mappings:
     eu-west-1:
       AMI:
         - "ami-47cefa33"
+Mappings:
+  RegionMap:
+    eu-west-1:
+      AMI:
+        - "ami-47cefa33"
 Resources:
   Ec2Instance:
     Type: "AWS::EC2::Instance"
