changes in wp 8 infrastructure file

--- a/src/com/web/wp-infrastructure5 - signal.yaml
+++ b/src/com/web/wp-infrastructure5 - signal.yaml
@@ -47,6 +47,10 @@ Mappings:
       "AMALINUX" : "ami-cacbbea5" # AMALINUX SEP 2016
     sa-east-1:
       "AMALINUX" : "ami-b777e4db" # AMALINUX SEP 2016
+    ap-south-1:
+      "AMALINUX" : "ami-cacbbea5" # AMALINUX SEP 2016
+    sa-east-1:
+      "AMALINUX" : "ami-b777e4db" # AMALINUX SEP 2016
   InstanceSize:
     SMALL:
       "EC2" : "t2.micro"
